<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="asset_asset_activity_insert_address150">备注</string>
	<string name="asset_asset_activity_recharge100">长按识别二维码</string>
	<string name="asset_assetRecordsActivity1">全部</string>
	<string name="asset_asset_item_asset_records60">目标合约交易下单</string>
	<string name="asset_transferActivity2">转账数量不可少于</string>
	<string name="asset_transferActivity1">请输入转账数量</string>
	<string name="asset_asset_item_asset_records180">时间</string>
	<string name="asset_transferActivity4">手续费:</string>
	<string name="asset_transferActivity3">可用:</string>
	<string name="asset_asset_activity_insert_address60">地址</string>
	<string name="asset_asset_activity_transfer270">转账数量不可少于100</string>
	<string name="asset_transferActivity5">/次</string>
	<string name="asset_asset_fragment_asset100">目标账户</string>
	<string name="asset_asset_item_withdraw_records110">提币数量</string>
	<string name="asset_asset_activity_asset_records20">账单明细</string>
	<string name="asset_asset_activity_transfer100">请输入对方ID</string>
	<string name="asset_asset_item_address40">删除</string>
	<string name="asset_asset_activity_transfer300">提交</string>
	<string name="asset_asset_item_asset180">转账</string>
	<string name="asset_asset_activity_transfer20">站内转账</string>
	<string name="asset_asset_activity_transfer180">可用:0.00</string>
	<string name="asset_asset_fragment_asset20">资产</string>
	<string name="asset_asset_activity_recharge190">请勿向上述地址充值任何非BTC资产，否则资产将 不可找回。</string>
	<string name="asset_asset_item_asset100">冻结</string>
	<string name="asset_asset_activity_recharge20">充币</string>
	<string name="asset_asset_activity_insert_address200">提币</string>
	<string name="asset_asset_activity_transfer_records20">转账明细</string>
	<string name="asset_asset_activity_withdraw320">到账数量：---</string>
	<string name="asset_rechargeActivity2">资产，否则资产将不可找回。</string>
	<string name="asset_withdrawActivity7">到账数量：</string>
	<string name="asset_rechargeActivity1">请勿向上述地址充值任何非</string>
	<string name="asset_withdrawActivity4">最小提币数量</string>
	<string name="asset_withdrawActivity3">账户余额不足</string>
	<string name="asset_asset_activity_insert_address170">请填写备注信息</string>
	<string name="asset_asset_activity_withdraw190">数量</string>
	<string name="asset_asset_activity_recharge160">复制地址</string>
	<string name="asset_asset_activity_withdraw60">可用</string>
	<string name="asset_asset_activity_asset_records100">币种</string>
	<string name="asset_asset_activity_transfer250">转账数量</string>
	<string name="asset_assetFragment1">为了保证您的账户安全，短信验证和谷歌验证方式至少开启一种</string>
	<string name="asset_withdrawRecordsActivity5">失败</string>
	<string name="asset_withdrawRecordsActivity4">已到账</string>
	<string name="asset_asset_activity_insert_address80">请输入钱包地址</string>
	<string name="asset_withdrawRecordsActivity1">待审核</string>
	<string name="asset_asset_fragment_asset120">总资产折合(USDT)</string>
	<string name="asset_withdrawRecordsActivity3">已拒绝</string>
	<string name="asset_withdrawRecordsActivity2">到账中</string>
	<string name="asset_asset_activity_withdraw_records20">提币记录</string>
	<string name="asset_asset_item_withdraw_records250">审核时间</string>
	<string name="asset_asset_activity_withdraw230">最小提币数量200</string>
	<string name="asset_asset_item_transfer_records20">资金转入</string>
	<string name="asset_asset_item_withdraw_records180">提交时间</string>
	<string name="asset_asset_activity_transfer200">手续费:0.00</string>
	<string name="asset_asset_activity_asset_records170">类型</string>
	<string name="asset_asset_activity_recharge40">选择币种</string>
	<string name="asset_asset_activity_withdraw140">输入或长按粘贴地址</string>
	<string name="asset_asset_activity_address_list20">提币地址</string>
	<string name="asset_asset_activity_withdraw300">手续费：5.5550 BTC/次</string>
	<string name="asset_asset_activity_transfer80">对方ID</string>
	<string name="asset_assetFragment101">为了保证您的账户安全，短信验证和谷歌验证方式至少开启一种</string>
	<string name="asset_assetFragment2">请先设置资金密码</string>
    <string name="asset_payed">已支付</string>
	<string name="asset_unpay">未支付</string>
	<string name="asset_recharge_records">充币记录</string>
    <string name="asset_withdraw">提币地址</string>
	<string name="asset_recharge_address">充值地址</string>
	<string name="asset_withdraw_count">提币数量</string>
	<string name="asset_recharge_count">充币数量</string>
</resources>